--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="assets/img/meufavicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Projeto Final</title>
+  </head>
+  <body>
+    <header class="header-wrapper">
+      <div class="header">
+        <div class="checkbox-container">
+          <div class="checkbox-wrapper">
+            <input type="checkbox" id="toggle" />
+            <label for="toggle" class="checkbox">
+              <div class="trace"></div>
+              <div class="trace"></div>
+              <div class="trace"></div>
+            </label>
+            <div class="menu"></div>
+            <nav class="menu-items">
+              <ul>
+                <li>
+                  <a href="#">Home</a>
+                </li>
+                <li>
+                  <a href="#">Sobre</a>
+                </li>
+                <li>
+                  <a href="#">Projetos</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <h1>Lauro Otávio Urbano</h1>
+      <h2>Developer (Desenvolvedor) / Programmer (Programador)</h2>
+      <h2>Business Analist (Analista de Negócios)</h2>
+      <h2>Quality Assurance (Garantia da Qualidade)</h2>
+      <h3>Python | Javascript - HTML - CSS| Typescript | Java - Eclipse</h3>
+      <div class="social-media">
+        <a href="https://www.linkedin.com/in/admeadslauro/" target="_blank"
+          ><img
+            src="assets/img/linkedin.png"
+            alt="ícone do Linkedin"
+          />Linkedin</a
+        >
+        <a href="https://github.com/laurourbano" target="_blank"
+          ><img src="assets/img/github.png" alt="ícone do Github" />Github</a
+        >
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="card-container">
+          <div class="card-text">
+            Neste link você poderá perceber todo meu empenho em aprender cada vez mais.
+            Produzindo diversos projetinhos bacanas.
+          </div>
+          <a href="https://github.com/laurourbano" target="_blank">
+            <div class="card">
+              <div class="card-wrapper">
+                <h2>Github</h2>
+                <p>Veja meus projetos!</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="card-container">
+          <a href="https://www.linkedin.com/in/admeadslauro/" target="_blank">
+            <div class="card">
+              <div class="card-wrapper">
+                <h2>Linkedin</h2>
+                <p>Vem ver minha carreira profissional!</p>
+              </div>
+            </div>
+          </a>
+          <div class="card-text">
+            Embora minha carreira em tecnologia esteja no início, já tenho bastante bagarem de vida.
+            Através de outra graduação e experiências profissionais diversas, pude aprender bastante coisa na vida.
+            Sempre gostei de tecnologia e agora estou me dedicando para que minha carreira decole, através de passos pequenos, mas firmes e constantes.
+          </div>
+        </div>
+
+        <div class="card-container">
+          <div class="card-text">
+            Um pouco de que eu sou e o que eu gosto de fazer no meu dia-a-dia!            
+          </div>
+          <a href="https://www.instagram.com/lauro_otavio/" target="_blank">
+            <div class="card">
+              <div class="card-wrapper">
+                <h2>Instagram</h2>
+                <p>Ou mais do meu dia-a-dia ;)</p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <p>Página criada por @ Lauro Otávio Urbano</p>
+      <p class="creditos">Github ícones criados por Roundicons - Flaticon</p>
+      <p class="creditos">Linkedin ícones criados por Pixel Buddha - Flaticon</p>
+    </footer>
+    <script src="js/main.js"></script>
+    <script src="js/data.js"></script>
+  </body>
 </html>
