--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="assets/img/meufavicon.png"
-      type="image/x-icon"
-    />
+    <meta name="description" content="Curriculo de Lauro Otávio Urbano">
+    <link rel="shortcut icon" href="assets/img/meufavicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Projeto Final</title>
+    <title>Lauro Otávio Urbano</title>
   </head>
   <body>
     <header class="header-wrapper">
