--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <div class="trace"></div>
               <div class="trace"></div>
             </label>
+            <h2 class="nova-data"></h2>
             <div class="menu"></div>
             <nav class="menu-items">
               <ul>
