--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
       </div>
       <h1>Lauro Otávio Urbano</h1>
       <h2>Developer (Desenvolvedor) / Programmer (Programador)</h2>
-      <h2>Business Analist (Analista de Negócios)</h2>
-      <h2>Quality Assurance (Garantia da Qualidade)</h2>
-      <h3>Python | Javascript - HTML - CSS| Typescript | Java - Eclipse</h3>
+      <h3>Javascript - HTML - CSS</h3>
       <div class="social-media">
         <a href="https://www.linkedin.com/in/admeadslauro/" target="_blank"
           ><img
