--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
           </a>
           <div class="card-text">
-            Embora minha carreira em tecnologia esteja no início, já tenho bastante bagarem de vida.
+            Embora minha carreira em tecnologia esteja no início, já tenho bastante bagagem de vida.
             Através de outra graduação e experiências profissionais diversas, pude aprender bastante coisa na vida.
             Sempre gostei de tecnologia e agora estou me dedicando para que minha carreira decole, através de passos pequenos, mas firmes e constantes.
           </div>
