correção de alinhamento
alinhamento responsivo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <h1>Lauro Otávio Urbano</h1>
-      <h2>Developer (Desenvolvedor) / Programmer (Programador)</h2>
+      <h2 class="objetivo">Developer (Desenvolvedor) / Programmer (Programador)</h2>
       <h3>Javascript - HTML - CSS</h3>
       <div class="social-media">
         <a href="https://www.linkedin.com/in/admeadslauro/" target="_blank"
