--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2 class="objetivo">Developer (Desenvolvedor) / Programmer (Programador)</h2>
       <h3>Javascript - HTML - CSS</h3>
       <div class="social-media">
-        <a href="https://www.linkedin.com/in/admeadslauro/" target="_blank"
+        <a href="https://www.linkedin.com/in/laurourbano/" target="_blank"
           ><img
             src="assets/img/linkedin.png"
             alt="ícone do Linkedin"
